<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input1"
        android:layout_margin="5dp"
        android:hint="숫자1"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input2"
        android:layout_margin="5dp"
        android:hint="숫자2"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:id="@+id/plus"
        android:layout_margin="5dp"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:id="@+id/minus"
        android:layout_margin="5dp"
        android:onClick="onClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiple"
        android:id="@+id/multiple"
        android:layout_margin="5dp"
        android:onClick="onClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:id="@+id/divide"
        android:layout_margin="5dp"
        android:onClick="onClick" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remainder"
        android:id="@+id/remainder"
        android:layout_margin="5dp"
        android:onClick="onClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/output"
        android:layout_margin="5dp"
        android:hint="출력값"
        android:onClick="onClick"
        android:textColor="#FF0000"
        android:textSize="25dp" />

</LinearLayout>
